# CloudStore-Lite

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/cloudstore_lite/: __init__.py  auth.py  config.py  db.py  main.py  models.py  schemas.py  signed_urls.py  storage.py
tests/: test_api.py
