[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudstore-lite"
version = "0.1.0"
description = "Lightweight object storage service with PostgreSQL metadata and signed download URLs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116,<1.0",
  "pydantic-settings>=2.8,<3.0",
  "python-multipart>=0.0.20,<1.0",
  "sqlalchemy>=2.0.41,<3.0",
  "psycopg[binary]>=3.2.9,<4.0",
  "uvicorn[standard]>=0.35,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

